# Automated-Python-Docstring-Generator

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Automated_Python_Docstring_Generator.ipynb  README.md  __init__.py  demo_pass.py  docugenius_cli.py  docugenius_config.py  m2_core.py  m3trial.py  pyproject.toml  pytest.ini  streamlit_app.py  test_edge_cases.py  test_hook.py
.github/workflows/: validate-docstrings.yml
